--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "author": "pboardman",
   "license": "MIT",
   "dependencies": {
-    "electron": "^7.1.2",
+    "electron": ">=7.2.4",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.6",
+    "express-fileupload": ">=1.1.9",
     "image-size": "^0.8.3"
   }
 }
